testdata/baselines/reference/submodule/conformance/jsdocImportTypeReferenceToClassAlias.errors.txt
mod1.js(1,7): error TS2300: Duplicate identifier 'C'.
mod1.js(4,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod1.js(4,16): error TS2300: Duplicate identifier 'C'.


==== mod1.js (3 errors) ====
    class C {
          ~
!!! error TS2300: Duplicate identifier 'C'.
        s() { }
    }
    module.exports.C = C
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                   ~
!!! error TS2300: Duplicate identifier 'C'.
    
==== test.js (0 errors) ====
    /** @typedef {import('./mod1').C} X */
    /** @param {X} c */
    function demo(c) {
        c.s
    }
    